apps/base/photos/immich/psql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgresql
  namespace: photos
spec:
  serviceName: immich-postgresql-svc
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      containers:
        - name: postgresql
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:8d292bdb796aa58bbbaa47fe971c8516f6f57d6a47e7172e62754feb6ed4e7b0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
---
# Network for PostgreSQL
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql-svc
  namespace: photos
spec:
  selector:
    app: immich-postgresql
  ports:
    - port: 5432
