apps/base/photos/immich/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ui-ingress
  namespace: photos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: immich.${INTERNAL_ADDRESS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server-svc
                port:
                  number: 2283
  tls:
    - hosts:
        - immich.${INTERNAL_ADDRESS}
      secretName: immich-ui-tls
